[gd_scene load_steps=6 format=3 uid="uid://beqa0xujc2w2f"]

[ext_resource type="Script" path="res://menu/menu.gd" id="2_3tjy3"]
[ext_resource type="PackedScene" uid="uid://dkho6dqhdf3hw" path="res://menu/options.tscn" id="2_kuhxs"]
[ext_resource type="PackedScene" uid="uid://roiivo44gftv" path="res://menu/credits.tscn" id="3_6jhuo"]
[ext_resource type="PackedScene" uid="uid://bbndvhdy1dfel" path="res://menu/high_score.tscn" id="4_vmyfa"]
[ext_resource type="PackedScene" uid="uid://41u3xkh4aa60" path="res://menu/how_to_play.tscn" id="5_msbyt"]

[node name="MenuUI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("2_3tjy3")

[node name="SubMenus" type="VBoxContainer" parent="."]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -15.5
offset_right = 400.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BackButton" type="Button" parent="SubMenus" groups=["Button"]]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Back"

[node name="Screens" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Options" parent="Screens" instance=ExtResource("2_kuhxs")]
visible = false
layout_mode = 2

[node name="Credits" parent="Screens" instance=ExtResource("3_6jhuo")]
visible = false
custom_minimum_size = Vector2(800, 750)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="HighScore" parent="Screens" instance=ExtResource("4_vmyfa")]
visible = false
custom_minimum_size = Vector2(800, 750)
layout_mode = 2
size_flags_horizontal = 4

[node name="HowToPlay" parent="Screens" instance=ExtResource("5_msbyt")]
visible = false
custom_minimum_size = Vector2(800, 750)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="MenuItems" type="VBoxContainer" parent="Screens"]
custom_minimum_size = Vector2(300, 500)
layout_mode = 2
theme_override_constants/separation = 20

[node name="Resume" type="Button" parent="Screens/MenuItems" groups=["Button"]]
layout_mode = 2
focus_neighbor_top = NodePath("../Exit")
text = "Resume"

[node name="Start" type="Button" parent="Screens/MenuItems" groups=["Button"]]
layout_mode = 2
text = "New Game"

[node name="HighScore" type="Button" parent="Screens/MenuItems" groups=["Button"]]
layout_mode = 2
text = "Leader Board"

[node name="HowToPlay" type="Button" parent="Screens/MenuItems" groups=["Button"]]
layout_mode = 2
text = "How To Play"

[node name="Options" type="Button" parent="Screens/MenuItems" groups=["Button"]]
layout_mode = 2
text = "Options"

[node name="Credits" type="Button" parent="Screens/MenuItems" groups=["Button"]]
layout_mode = 2
text = "Credits"

[node name="Exit" type="Button" parent="Screens/MenuItems" groups=["Button"]]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Resume")
text = "Exit"

[connection signal="pressed" from="SubMenus/BackButton" to="Screens/MenuItems" method="_on_back_button_pressed"]
[connection signal="back" from="Screens/Options" to="." method="show_menu"]
[connection signal="back" from="Screens/Credits" to="." method="show_menu"]
[connection signal="back" from="Screens/HighScore" to="." method="show_menu"]
[connection signal="back" from="Screens/HowToPlay" to="." method="show_menu"]
[connection signal="pressed" from="Screens/MenuItems/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Screens/MenuItems/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Screens/MenuItems/Exit" to="." method="_on_exit_pressed"]
